# open-world

./: .gitignore  README.md  build.ts  index.html  package.json  tsconfig.json  vite.config.ts
public/: index.html
server/: dev.ts  prod.ts  server.ts
src/: main.ts
src/app/: App.tsx  AppContext.tsx
src/features/auth/: AuthSection.tsx
src/features/controls/: LocationSearch.tsx  PrivacySettings.tsx  ProgressBar.tsx  RouteControls.tsx
src/features/map/: MapView.tsx  map-state.ts
src/features/notifications/: Notifications.tsx
src/features/sidebar/: ActivitySidebar.tsx
src/features/stats/: CityStats.tsx  Stats.tsx
src/lib/: canvas-layer.ts  grid.ts  pmtiles-mapping.ts  projection.ts  route-layer.ts  stats.ts  storage.ts  strava.ts  tiles.ts  wasm-bridge.ts
src/lib/geocoding/: city-manager.ts  world-lookup.ts
src/lib/geocoding/city-data/: loader.ts
src/styles/: app.css
src/types/: index.ts
src/ui/: controls.ts  sidebar.ts
src/ui/components/: city-stats.ts  location-search.ts  privacy.ts  progress.ts  route-controls.ts  stats.ts  ui-utils.ts
src/wasm/: CMakeLists.txt  core.cpp  core.h
src/wasm/tests/: test_grid.cpp  test_projection.cpp  test_stats.cpp  test_visited.cpp
src/worker/: city-processor.ts  processor.ts
